--- a/web/view/cadastroFrequencia.twig
+++ b/web/view/cadastroFrequencia.twig
@@ -14,10 +14,10 @@
                 <fieldset>
                 <legend><i class="glyphicon glyphicon-menu-right"></i><b>Ação social</b></legend>
                     <div class="form-group">
-                        <select class="form-control" id="acao_social" required>
+                        <select class="form-control" id="acao" name="acao" required>
                             <option value="">Selecione</option>
-                            {% for acao in acoes_sociais %}
-                            <option value="{{ acao.id }}" {% if acao is defined and acao.id == acao.id %} selected {% endif %}>{{ acao.nome }}</option>
+                            {% for acao in acoes %}
+                            <option value="{{ acao.id }}">{{ acao.nome }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -26,35 +26,35 @@
                         <legend><i class="glyphicon glyphicon-menu-right"></i><b>Dados da ação social</b></legend>
                             <div class="form-group col-sm-6">
                                 <label for="voluntario">Voluntário</label>
-                                <input type="text" name="voluntario" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                                <input type="text" name="voluntario" id="voluntario" class="form-control" readonly>
                             </div>
                             <div class="form-group col-sm-2">
                                 <label for="entrada">Entrada</label>
-                                <input type="text" name="entrada" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                                <input type="text" name="entrada" id="entrada" class="form-control" readonly>
                             </div>
                             <div class="form-group col-sm-2">
                                 <label for="saida">Saída</label>
-                                <input type="text" name="saida" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
-                            </div>
-                            <div class="form-group col-sm-3">
-                                <label for="dia">Dia</label>
-                                <input type="text" name="dia" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
-                            </div>
-                            <div class="form-group col-sm-3">
-                                <label for="turno">Turno</label>
-                                <input type="text" name="turno" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
-                            </div>
-                            <div class="form-group col-sm-2">
-                                <label for="inicio">Início</label>
-                                <input type="text" name="inicio" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
-                            </div>
-                            <div class="form-group col-sm-2">
-                                <label for="termino">Término</label>
-                                <input type="text" name="termino" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                                <input type="text" name="saida" id="saida" class="form-control" readonly>
                             </div>
                             <div class="form-group col-sm-2">
                                 <label for="situacao">Situação</label>
-                                <input type="text" name="situacao" class="form-control" value="{% if acao is defined %}{{ acao.voluntario.pessoa.nome }}{% endif %}" disabled>
+                                <input type="text" name="situacao" id="situacao" class="form-control" readonly>
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label for="dia">Dia</label>
+                                <input type="text" name="dia" id="dia" class="form-control" readonly>
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label for="turno">Turno</label>
+                                <input type="text" name="turno" id="turno" class="form-control" readonly>
+                            </div>
+                            <div class="form-group col-sm-2">
+                                <label for="inicio">Início</label>
+                                <input type="text" name="inicio" id="inicio" class="form-control" readonly>
+                            </div>
+                            <div class="form-group col-sm-2">
+                                <label for="termino">Término</label>
+                                <input type="text" name="termino" id="termino" class="form-control" readonly>
                             </div>
                         </legend>
                     </div>
@@ -84,7 +84,7 @@
                 </fieldset>
                 <div class="form-group col-sm-12 text-center">
                     <button type="submit" class="btn btn-primary">
-                        <i class="glyphicon glyphicon-ok"> Cadastrar</i>
+                        <i class="glyphicon glyphicon-ok"> Salvar</i>
                     </button>
                     <button type="button" class="btn btn-default">
                         <i class="glyphicon glyphicon-remove"> Limpar</i>
