--- a/web/view/leiaute.twig
+++ b/web/view/leiaute.twig
@@ -131,8 +131,9 @@
     <!-- Theme JavaScript -->
     <script src="{{ asset('clean-blog.min.js', 'js') }}"></script>
 
-    <!-- JavaScript do quadro -->
+    <!-- JavaScript especificos -->
     <script src="{{ asset('acao.js', 'js') }}"></script>
+    <script src="{{ asset('frequencia.js', 'js') }}"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
