--- a/web/view/cadastroTipo.twig
+++ b/web/view/cadastroTipo.twig
@@ -24,7 +24,7 @@
                     </div>
                     <div class="form-group col-sm-12 text-center">
                         <button type="submit" class="btn btn-primary">
-                            <i class="glyphicon glyphicon-ok"> Cadastrar</i>
+                            <i class="glyphicon glyphicon-ok"> Salvar</i>
                         </button>
                         <button type="button" class="btn btn-default">
                             <i class="glyphicon glyphicon-remove"> Limpar</i>
