--- a/web/view/cadastroVoluntario.twig
+++ b/web/view/cadastroVoluntario.twig
@@ -115,7 +115,7 @@
                 </fieldset>
                 <div class="form-group col-sm-12 text-center">
                     <button type="submit" class="btn btn-primary">
-                        <i class="glyphicon glyphicon-ok"> Cadastrar</i>
+                        <i class="glyphicon glyphicon-ok"> Salvar</i>
                     </button>
                     <button type="reset" class="btn btn-default">
                         <i class="glyphicon glyphicon-remove"> Limpar</i>
